--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,15 @@
         <version>2.24</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-firefox-driver -->
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-firefox-driver</artifactId>
+        <version>3.3.1</version>
+    </dependency>
+
+
+
 </dependencies>
 
 </project>
